[metadata]
name = rxn_availability
version = attr: rxn.availability.__version__
description = Describe your project here.
author = IBM RXN team
author_email = rxn4chemistry@zurich.ibm.com
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir=
    =src
packages=find_namespace:
zip_safe = False
include_package_data = False  # incompatible with package_data
install_requires =
    importlib-resources>=5.8.0
    pydantic>=1.9.0
    pydantic_settings>=2.1.0
    pymongo>=1.3.1
    rxn-chem-utils>=1.5.0
    rxn-utils>=1.1.1

[options.packages.find]
where=src

[options.package_data]
rxn =
    availability/py.typed
    availability/resources/common_compounds.txt

[options.extras_require]
dev =
    black>=22.3.0
    flake8>=3.7.9
    isort>=5.10.1
    mypy>=0.910
    pytest>=5.3.4
    pytest-cov>=2.8.1
    types-setuptools>=57.4.14
rdkit =
    # install RDKit. This is not as a setup dependency in order not to install it
    # in downstream packages and avoid potential conflicts with the conda
    # installation of RDKit
    rdkit>=2021.3.2

[flake8]
extend-ignore = E203, E501
